# nsub

./: .gitignore  Cargo.toml  README.md  clippy.toml  install.sh
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: config.yml  protocol.yml  rule.yml  template.yml
.github/workflows/: ci.yml  release.yml
crates/nsub-cli/: Cargo.toml
crates/nsub-cli/src/: main.rs
crates/nsub-core/: Cargo.toml
crates/nsub-core/src/: fetch.rs  lib.rs  pipe.rs  protocol.rs  render.rs  rules.rs  types.rs
functions/: .gitkeep
protocols/: anytls.toml  hysteria2.toml  ss.toml  trojan.toml  tuic.toml  vless.toml  vmess.toml
rules/: by-source.toml  grouped.toml  simple.toml
skills/: templates.md
skills/functions/: SKILL.md
skills/protocols/: SKILL.md
skills/rules/: SKILL.md
skills/templates/: SKILL.md
templates/clash/: by-source.tpl  config.tpl  grouped.tpl  proxy.tpl  simple.tpl
templates/clash/proxy/: anytls.tpl  hy2.tpl  hysteria2.tpl  ss.tpl  trojan.tpl  tuic.tpl  vless.tpl  vmess.tpl
templates/node/: config.tpl
templates/surge/: config.tpl  proxy.tpl
templates/surge/proxy/: hysteria2.tpl  ss.tpl  trojan.tpl  tuic.tpl  vless.tpl  vmess.tpl
