[package]
name = "nsub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nsub-core = { path = "../nsub-core" }

clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
