[package]
name = "nsub-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

base64 = "0.22"
regex = "1"
url = "2"
rhai = "1"
tera = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
